# libclayer

./: .cirrus.yml  .gitignore  .openbsd.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  configure.ac  libclayer.pc.in
.github/workflows/: main.yml
examples/: .gitignore  Makefile.am
include/: Makefile.am  ctype.h  errno.h  inttypes.h  kernaux.h  libclayer.h  setjmp.h  stdlib.h  string.h
include/kernaux/: macro.h  version.h.in
include/libclayer/: ctype.h  errno.h  inttypes.h  setjmp.h  stdlib.h  string.h
include/sys/: types.h
make/: checks.am  shared.am  test-suite-log
pkgs/freebsd/devel/libkernaux/: pkg-plist
src/: assert.h  ctype.c  errno.c  libclayer.c  stdlib.c  string.c
tests/: .gitignore  Makefile.am  main.c  string.c
