nobase_include_HEADERS = \
	libclayer.h          \
	libclayer/ctype.h    \
	libclayer/errno.h    \
	libclayer/inttypes.h \
	libclayer/setjmp.h   \
	libclayer/stdlib.h   \
	libclayer/string.h   \
	libclayer/sys/types.h

if ENABLE_LIBC
nobase_include_HEADERS += \
	ctype.h    \
	errno.h    \
	inttypes.h \
	setjmp.h   \
	stdlib.h   \
	string.h   \
	sys/types.h
endif
